# Progetto-Scacchiera-elettronica

./: CMakeLists.txt  LICENSE  LogComputerVSComputer.txt  LogComputerVSGiocatore.txt  README.txt
include/: Alfiere.h  Cavallo.h  Computer.h  ForwardDeclaration.h  Giocatore.h  Log.h  Pedone.h  Pezzo.h  Posizione.h  Re.h  Regina.h  Scacchiera.h  Scacchista.h  Torre.h
src/: Alfiere.cpp  Cavallo.cpp  Computer.cpp  Giocatore.cpp  Log.cpp  Pedone.cpp  Re.cpp  Regina.cpp  Scacchiera.cpp  Torre.cpp  mainReplay.cpp  mainScacchiera.cpp
